# ZIGBEE

./: README.md
esp32_p4_c6_wifi_h2_ncp/components/host_zb_manager/: CMakeLists.txt  Kconfig
esp32_p4_c6_wifi_h2_ncp/components/host_zb_manager/devices/: zb_manager_basic_cluster.c  zb_manager_clusters.c  zb_manager_devices.c  zb_manager_identify_cluster.c  zb_manager_temperature_meas_cluster.c
esp32_p4_c6_wifi_h2_ncp/components/host_zb_manager/devices/include/: zb_manager_basic_cluster.h  zb_manager_clusters.h  zb_manager_devices.h  zb_manager_temperature_meas_cluster.h
esp32_p4_c6_wifi_h2_ncp/components/host_zb_manager/include/: esp_zigbee_core.h
esp32_p4_c6_wifi_h2_ncp/components/host_zb_manager/include/zcl/: esp_zigbee_zcl_command.h  esp_zigbee_zcl_common.h
esp32_p4_c6_wifi_h2_ncp/components/host_zb_manager/include/zdo/: esp_zigbee_zdo_command.h  esp_zigbee_zdo_common.h
esp32_p4_c6_wifi_h2_ncp/components/host_zb_manager/src/: esp_host_bus.c  esp_host_zb.c  esp_zigbee_core.c  esp_zigbee_endpoint.c
esp32_p4_c6_wifi_h2_ncp/components/host_zb_manager/src/priv/: esp_host_bus.h  esp_host_zb.h
esp32_p4_c6_wifi_h2_ncp/components/host_zb_manager/src/zcl/: esp_zigbee_zcl_command.c
esp32_p4_c6_wifi_h2_ncp/main/: CMakeLists.txt  Kconfig  esp_zb_host.c  idf_component.yml
esp32_p4_c6_wifi_h2_ncp/main/lcd_gui_prog/: filelist.txt  idf_component.yml  lvgl_port_gui_init.c  lvgl_port_gui_init.h  lvgl_port_zb_interface.c  lvgl_port_zb_interface.h  project — копия.info  project.info  ui.c  ui.h  ui_events.c  ui_events.h  ytytCMakeLists.txt
esp32_p4_c6_wifi_h2_ncp/main/lcd_gui_prog/fonts/: ui_font_RobotoCyrTitles.c  ui_font_RobotoMedium12.c  ui_font_RobotoMedium36.c
esp32_p4_c6_wifi_h2_ncp/main/lcd_gui_prog/images/: ui_img_icons_add_widget_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c  ui_img_icons_add_widget_48dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_bedroom_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c  ui_img_icons_child_hat_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c  ui_img_icons_frame_inspect_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c  ui_img_icons_garage_car_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c  ui_img_icons_group_48dp_2f5b7c_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_humidity_percentage_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_lock_close_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c  ui_img_icons_lock_open_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c  ui_img_icons_lounge_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c  ui_img_icons_net_is_close_48dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_net_is_open_48dp_61c6ce_fill1_wght200_grad0_opsz48_png.c  ui_img_icons_photo_library_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_power_off_circle_48dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_power_on_circle_36dp_61c6ce_fill1_wght200_grad0_opsz40_png.c  ui_img_icons_rele_on_64dp_61c6ce_fill1_wght200_grad0_opsz48_png.c  ui_img_icons_scene_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_settings_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c  ui_img_icons_settings_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
esp32_p4_c6_wifi_h2_ncp/main/lcd_gui_prog/lvgl_port_gui_zb_images_not_compile_dont_remove/: ui_img_icons_add_home_work_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c  ui_img_icons_category_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_device_thermostat_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_mic_36dp_2f5b7c_fill0_wght400_grad0_opsz40_png.c  ui_img_icons_rele_off_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_settings_24dp_61c6ce_fill0_wght200_grad0_opsz24_png.c  ui_img_icons_switch_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_wc_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
esp32_p4_c6_wifi_h2_ncp/main/lcd_gui_prog/screens/: ui_MainScreen.c  ui_MainScreen.h  ui_RoomsScreen.c  ui_RoomsScreen.h
esp32_p4_c6_wifi_h2_ncp/main/lcd_gui_prog/zb_gui_components/: ui_PanelComponent.c  ui_PanelComponent.h  ui_ScreenComponent.c  ui_ScreenComponent.h  ui_widgets.c  ui_widgets.h
squareline_files/squareline_export/ui_files/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h
squareline_files/squareline_export/ui_files/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_lampsensorcomp.c  ui_comp_lampsensorcomp.h
squareline_files/squareline_export/ui_files/fonts/: ui_font_CalibriBold12.c  ui_font_RobotoBold14.c  ui_font_RobotoBold16.c  ui_font_RobotoBold18.c  ui_font_RobotoCyrInfoLabels.c
squareline_files/squareline_export/ui_files/images/: ui_img_bg_gradient_png.c  ui_img_bg_line_bottom_png.c  ui_img_bg_top_line_png.c  ui_img_icons_bathtub_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c  ui_img_icons_cards_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_devices_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_graph_5_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_keyboard_24dp_2f5b7c_fill0_wght400_grad0_opsz24_png.c  ui_img_icons_keyboard_36dp_2f5b7c_fill0_wght400_grad0_opsz40_png.c  ui_img_icons_lightbulb_off_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c  ui_img_icons_power_off_circle_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
squareline_files/squareline_export/ui_files/screens/: ui_MainScreen.c  ui_MainScreen.h  ui_RoomsScreen.c  ui_RoomsScreen.h
zb_manager_ncp_h2/components/zb_manager/: CMakeLists.txt  Kconfig  idf_component.yml  zb_aps_handler.c  zb_handlers.c  zb_manager.c  zb_manager_cluster_data_helper.c  zb_manager_endpoints_gen.c  zb_manager_utility_ieee_addr.c  zb_manager_utility_match_desc.c  zb_manager_utility_node_desc.c  zb_raw_action_handle.c
zb_manager_ncp_h2/components/zb_manager/devices/: zb_manager_devices.c  zb_manager_temperature_meas_cluster.c
zb_manager_ncp_h2/components/zb_manager/devices/include/: zb_manager_devices.h  (+4 more)
zb_manager_ncp_h2/components/zb_manager/include/: zb_aps_handler.h  zb_handlers.h  zb_manager.h  zb_manager_cluster_data_helper.h  zb_manager_config.h  zb_manager_endpoints_gen.h  zb_manager_obj_types.h  zb_manager_utility.h  zb_raw_action_handle.h
(+80 files in other folders)
