SET(SOURCES components/ui_comp_lampsensorcomp.c
    components/ui_comp.c
    screens/ui_MainScreen.c
    screens/ui_RoomsScreen.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_icons_keyboard_36dp_2f5b7c_fill0_wght400_grad0_opsz40_png.c
    images/ui_img_icons_mic_36dp_2f5b7c_fill0_wght400_grad0_opsz40_png.c
    images/ui_img_icons_home_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_cards_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_category_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_photo_library_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_devices_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_settings_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_settings_24dp_61c6ce_fill0_wght200_grad0_opsz24_png.c
    images/ui_img_icons_lightbulb_off_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_power_on_circle_36dp_61c6ce_fill1_wght200_grad0_opsz40_png.c
    images/ui_img_icons_power_off_circle_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
    images/ui_img_icons_frame_inspect_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
    images/ui_img_bg_line_bottom_png.c
    images/ui_img_icons_kitchen_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
    images/ui_img_icons_bedroom_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
    images/ui_img_icons_lounge_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
    images/ui_img_icons_add_home_work_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
    images/ui_img_icons_add_home_work_48dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_add_home_work_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_bathtub_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
    images/ui_img_icons_child_hat_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
    images/ui_img_icons_device_thermostat_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_find_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_garage_car_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
    images/ui_img_icons_graph_5_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_group_48dp_2f5b7c_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_home_work_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_humidity_percentage_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_keyboard_24dp_2f5b7c_fill0_wght400_grad0_opsz24_png.c
    images/ui_img_icons_keyboard_48dp_2f5b7c_fill0_wght400_grad0_opsz48_png.c
    images/ui_img_icons_lightbulb_on_64dp_61c6ce_fill1_wght200_grad0_opsz48_png.c
    images/ui_img_icons_mic_48dp_2f5b7c_fill0_wght400_grad0_opsz48_png.c
    images/ui_img_icons_power_off_circle_48dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_power_on_circle_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
    images/ui_img_icons_power_on_circle_48dp_61c6ce_fill1_wght200_grad0_opsz48_png.c
    images/ui_img_icons_rele_off_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_rele_on_64dp_61c6ce_fill1_wght200_grad0_opsz48_png.c
    images/ui_img_icons_scene_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_switch_64dp_61c6ce_fill0_wght200_grad0_opsz48_png.c
    images/ui_img_icons_wc_36dp_61c6ce_fill0_wght200_grad0_opsz40_png.c
    images/ui_img_bg_top_line_png.c
    fonts/ui_font_Calibri12.c
    fonts/ui_font_Calibri14.c
    fonts/ui_font_CalibriBold12.c
    fonts/ui_font_CalibriBold14.c
    fonts/ui_font_CalibriBold22.c
    fonts/ui_font_RobotoBlack22.c
    fonts/ui_font_RobotoBold12.c
    fonts/ui_font_RobotoBold14.c
    fonts/ui_font_RobotoBold16.c
    fonts/ui_font_RobotoBold18.c
    fonts/ui_font_RobotoBold24.c
    fonts/ui_font_RobotoCyrInfoLabels.c
    fonts/ui_font_RobotoCyrTitles.c
    fonts/ui_font_RobotoMedium12.c
    fonts/ui_font_RobotoMedium14.c
    fonts/ui_font_RobotoMedium22.c
    fonts/ui_font_RobotoMedium36.c
    fonts/ui_font_RobotoMedium48.c)

add_library(ui ${SOURCES})
